--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>ru.sbrf.lessons.parcer.loaders</groupId>
     <artifactId>lesson15</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations-java5</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
